Enable writing AVI files to memory or disk files.
Instead of std streams, we now pass in an AviFileWrapper
which is a stream-like abstraction but can be specialized to
either in-memory or on-disk files.

--- a/avi20.vcxproj
+++ b/avi20.vcxproj
@@ -144,6 +144,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>AVI20_EXPORTS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ProgramDataBaseFileName>$(OutDir)$(ProjectName).pdb</ProgramDataBaseFileName>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
